<resources>
    <string name="app_name">GoLend</string>
    <string name="onboarding_welcome">¡Solicitar equipos de PUCP nunca fue tan fácil!</string>
    <string name="onboarding_devices">Reserva todos los equipos que necesites de forma sencilla</string>
    <string name="onboarding_hand">Gestiona las solicitudes de reserva de equipos desde tu teléfono</string>
    <string name="onboarding_ourusers">¡Nuestros usuarios nos recomiendan! ¿Te animas?</string>
    <string name="reservas_curso_txt">Encuentra aquí los equipos que tienes en préstamo</string>
    <string name="reservas_pasadas_txt">Encuentra aquí los equipos que ya ha te han sido prestados</string>
    <string name="solicitudes_pendientes_txt">Encuentra aquí tus solicitudes pendientes de aprobación</string>
    <string name="solicitudes_rechazadas_txt">Encuentra aquí tus solicitudes que han sido rechazadas</string>
    <string name="reservas_curso_empty">Aún no tienes reservas que se encuentren en curso</string>
    <string name="reservas_pasadas_empty">Aún no tienes reservas que hayan vencido</string>
    <string name="solicitudes_pendientes_empty">Aún no tienes solicitudes pendientes de aprobación</string>
    <string name="solicitudes_rechazadas_empty">Aún no tienes solicitudes que hayan sido rechazadas</string>

    <string name="reservas_curso_txt_TI">Encuentra aquí las reservas en curso del alumnado</string>
    <string name="reservas_pasadas_txt_TI">Encuentra aquí el historial de reservas de los alumnos</string>
    <string name="solicitudes_pendientes_txt_TI">Encuentra aquí las solicitudes que aún no han sido respondidas</string>
    <string name="solicitudes_rechazadas_txt_TI">Encuentra aquí las solicitudes que han sido rechazadas</string>
    <string name="reservas_curso_empty_TI">No hay alumnos con reservas en curso</string>
    <string name="reservas_pasadas_empty_TI">Los alumnos aún no han reservado equipos</string>
    <string name="solicitudes_pendientes_empty_TI">Se han respondido todas las solicitudes del alumnado</string>
    <string name="solicitudes_rechazadas_empty_TI">No se han rechazado solicitudes del alumnado</string>

    <string name="onboarding_start">Comenzar</string>
    <string name="preferences_key">Settings</string>
    <string name="role_student">Estudiante</string>
    <string name="role_administrator">Administrativ@</string>
    <string name="role_teacher">Docente</string>
    <string name="category_laptop">Laptop</string>
    <string name="category_celular">Celular</string>
    <string name="category_tablet">Tablet</string>
    <string name="category_monitor">Monitor</string>
    <string name="category_otros">Otros</string>
    <string name="reservas_curso">Reservas en curso</string>
    <string name="reservas_pasadas">Reservas pasadas</string>
    <string name="historial_reservas">Historial de reservas</string>
    <string name="solicitudes_rechazadas">Solicitudes rechazadas</string>
    <string name="solicitudes_pendientes">Solicitudes pendientes</string>
    <string name="apigateway_ip">http://eureka-eli.brazilsouth.cloudapp.azure.com:8090</string>

    <string name="mapbox_access_token">pk.eyJ1IjoiYXptb3JhbGVzbSIsImEiOiJjbGI5cXg0MnQwd2ZvM3NvMm5ob2hwbmx3In0.sm8hti-UFQfyS1_7RAt_8w</string>

    <string-array name="avatars">
        <item>https://firebasestorage.googleapis.com/v0/b/golend-e961f.appspot.com/o/avatars%2Frole_student.png?alt=media&amp;token=fc83e656-00d2-4e16-aaaf-449778d7715d</item>
        <item>https://firebasestorage.googleapis.com/v0/b/golend-e961f.appspot.com/o/avatars%2Fpfp2.png?alt=media&amp;token=de80952d-f935-402e-a5b4-559e543b0c54</item>
        <item>https://firebasestorage.googleapis.com/v0/b/golend-e961f.appspot.com/o/avatars%2Fpfp1.png?alt=media&amp;token=74035c44-5959-4d87-ae06-6f8c15bd2f14</item>
        <item>https://firebasestorage.googleapis.com/v0/b/golend-e961f.appspot.com/o/avatars%2Fpfp3.png?alt=media&amp;token=1b42a0a4-d752-4b4e-ab2d-f86c98679a82</item>
        <item>https://firebasestorage.googleapis.com/v0/b/golend-e961f.appspot.com/o/avatars%2Fpfp4.png?alt=media&amp;token=fdcb3f3e-d8dc-497c-adea-134a77fa8150</item>
        <item>https://firebasestorage.googleapis.com/v0/b/golend-e961f.appspot.com/o/avatars%2Frole_administrator.png?alt=media&amp;token=d3e01332-feec-4f3f-9253-e8b9e6f395ed</item>
        <item>https://firebasestorage.googleapis.com/v0/b/golend-e961f.appspot.com/o/avatars%2Fpfp5.png?alt=media&amp;token=9d9a0c5d-3d78-4ab7-bb42-dbceebaab9d7</item>
        <item>https://firebasestorage.googleapis.com/v0/b/golend-e961f.appspot.com/o/avatars%2Frole_teacher.png?alt=media&amp;token=77923516-fe28-4835-a0e0-676f73f1c0ef</item>
        <item>https://firebasestorage.googleapis.com/v0/b/golend-e961f.appspot.com/o/avatars%2Fpfp6.png?alt=media&amp;token=847889b3-2757-4e50-874f-db929066fceb</item>
        <item>https://firebasestorage.googleapis.com/v0/b/golend-e961f.appspot.com/o/avatars%2Fpfp7.png?alt=media&amp;token=44cda6a7-9f07-478b-ad9c-22bc3d89029c</item>
        <item>https://firebasestorage.googleapis.com/v0/b/golend-e961f.appspot.com/o/avatars%2Fpfp8.png?alt=media&amp;token=ea89e3af-42db-4d5a-b932-e9f180e8f297</item>
        <item>https://firebasestorage.googleapis.com/v0/b/golend-e961f.appspot.com/o/avatars%2Fpfp9.png?alt=media&amp;token=9644daaf-abcc-4db3-8b35-0abf891ea3a5</item>
        <item>https://firebasestorage.googleapis.com/v0/b/golend-e961f.appspot.com/o/avatars%2Fpfp10.png?alt=media&amp;token=1158f06a-0db2-451e-b190-fc5c3ac26091</item>
        <item>https://firebasestorage.googleapis.com/v0/b/golend-e961f.appspot.com/o/avatars%2Fpfp11.png?alt=media&amp;token=72b53506-7f3a-425b-af9c-15c3840bae80</item>
        <item>https://firebasestorage.googleapis.com/v0/b/golend-e961f.appspot.com/o/avatars%2Fpfp12.png?alt=media&amp;token=23516f3b-fde1-47fd-a20d-f36fc95f8dde</item>
        <item>https://firebasestorage.googleapis.com/v0/b/golend-e961f.appspot.com/o/avatars%2Fpfp13.png?alt=media&amp;token=2180addc-986b-4a3c-af0d-d8ddd4b15278</item>
        <item>https://firebasestorage.googleapis.com/v0/b/golend-e961f.appspot.com/o/avatars%2Fpfp14.png?alt=media&amp;token=deddb15d-e45e-4532-b6af-9de88c08003a</item>
        <item>https://firebasestorage.googleapis.com/v0/b/golend-e961f.appspot.com/o/avatars%2Fpfp15.png?alt=media&amp;token=9d29575a-7531-4c0d-b2f8-08a6d143dba6</item>
    </string-array>
</resources>